<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.scijava</groupId>
        <artifactId>pom-scijava</artifactId>
        <version>37.0.0</version>
        <relativePath />
    </parent>

    <groupId>imagejai</groupId>
    <artifactId>imagej-ai</artifactId>
    <version>0.2.0</version>
    <packaging>jar</packaging>

    <name>ImageJ AI Assistant</name>
    <description>AI-powered assistant for ImageJ/Fiji. Natural language control of image analysis.</description>

    <properties>
        <package-name>imagejai</package-name>
        <license.licenseName>bsd_2</license.licenseName>
        <license.copyrightOwners>Jamie</license.copyrightOwners>
        <!-- Java 11 target: required by pty4j / JediTerm (stage 05).
             Fiji ships a JRE 21+ so runtime is fine; build JDK stays at 25.
             NB: pom-scijava sets maven.compiler.release=8 in its BOM, and
             `release` trumps `source`/`target` — override it here explicitly. -->
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.release>11</maven.compiler.release>
        <scijava.jvm.build.version>[11,)</scijava.jvm.build.version>
        <!-- Override scijava's enforcer to allow building with newer JDKs -->
        <enforcer.skip>true</enforcer.skip>
        <!-- Kotlin stdlib version is pinned in stage 05 (when JediTerm/pty4j deps
             land). Pinning it here without those deps breaks artifact resolution:
             Kotlin 2.x retired kotlin-stdlib-common, but pom-scijava's BOM still
             references it. Leave at SciJava default until 05. -->
    </properties>

    <repositories>
        <repository>
            <id>scijava.public</id>
            <url>https://maven.scijava.org/content/groups/public</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- ImageJ2 / SciJava (provided by Fiji at runtime) -->
        <dependency>
            <groupId>net.imagej</groupId>
            <artifactId>imagej</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.imagej</groupId>
            <artifactId>ij</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.scijava</groupId>
            <artifactId>scijava-common</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Gson (provided by Fiji at runtime — ships as jars/gson-2.10.1.jar) -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <!-- Generate SciJava plugin annotation index -->
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <packageName>imagejai</packageName>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
